<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/activity_title_toolbar_bar"></include>
    <LinearLayout
        style="@style/itemstyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivery_date"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_no"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_name"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/supplier" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/waithour"/>
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/statu"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/layout_10dp"
        android:id="@+id/ryboard"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="@dimen/layout_0dp"/>
</LinearLayout>