<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_order_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_5dp"
        android:background="@drawable/accordingmaterialtop_sharp"
        android:orientation="vertical">
        <LinearLayout
            style="@style/itemstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/item_no"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/item_name"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/model"/>

        </LinearLayout>

        <View  style="@style/act_line_style"/>

        <LinearLayout
            style="@style/itemstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_item_no"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_model"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/itemstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_5dp"
        android:layout_marginRight="@dimen/layout_5dp"
        android:background="@drawable/form_head_back"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/gongDan_no"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/card_number"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/line"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pallet"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/feeding"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/employee_group"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/check"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_list"
        android:layout_marginBottom="@dimen/layout_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>