<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_0.5dp"
    android:layout_marginRight="@dimen/layout_0.5dp"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_no"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="1"
            android:text="@string/item_no"
            android:textSize="@dimen/textSize_14sp" />

        <View style="@style/ry_ve_line_style" />

        <TextView
            android:id="@+id/tv_item_name_unit_no"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="2"
            android:text="@string/item_name_unit_no"
            android:textSize="@dimen/textSize_14sp" />

        <View style="@style/ry_ve_line_style" />

        <TextView
            android:id="@+id/tv_item_spec"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="2"
            android:text="@string/model"
            android:textSize="@dimen/textSize_14sp" />

        <View style="@style/ry_ve_line_style" />

        <TextView
            android:id="@+id/tv_barcode_no"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="2"
            android:text="@string/barcode_no"
            android:textSize="@dimen/textSize_14sp" />

        <View style="@style/ry_ve_line_style" />

        <TextView
            android:id="@+id/tv_store_locator"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="2"
            android:text="@string/store_locator"
            android:textSize="@dimen/textSize_14sp" />

        <View style="@style/ry_ve_line_style" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_7dp"
            android:layout_weight="1"
            android:text="@string/num"
            android:textSize="@dimen/textSize_14sp" />
    </LinearLayout>
    <View style="@style/ry_line_style" />
</LinearLayout>