<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_order_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_5dp"
        android:background="@drawable/accordingmaterialtop_sharp"
        android:orientation="vertical">
        <LinearLayout
            style="@style/itemstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/item_no"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/item_name"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/model"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/gongDan_no"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/make_department"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/version"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/product_draw_no"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/order_no"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/production"/>
            <TextView
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/head_text"
                android:text="@string/craft_route"/>

        </LinearLayout>

        <View  style="@style/act_line_style"/>

        <LinearLayout
            style="@style/itemstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_item_no"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_model"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_gongDan_no"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_make_department"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_version"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_product_draw_no"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_order_no"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_production"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_craft_route"
                android:layout_width="@dimen/layout_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/itemstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_5dp"
        android:layout_marginRight="@dimen/layout_5dp"
        android:background="@drawable/form_head_back"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_no"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_name"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/model"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unit"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/standard_dosage"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/reality_dosage"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/should_num"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />
        <TextView
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reality_num"
            android:textColor="@color/white_ff"
            android:textSize="@dimen/textSize_14sp" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_list"
        android:layout_marginBottom="@dimen/layout_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>